<resources>
    <string name="app_name">Know Your Government</string>
    <string name="searchitem">SearchItem</string>
    <string name="aboutitem">aboutItem</string>
    <string name="know_your_government">Know Your Government</string>
    <string name="powered_by">Powered by</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="_2020_akash_tanwani">\@ 2020, Akash Tanwani</string>
    <string name="location">Location</string>
    <string name="textview">TextView</string>
    <string name="party">party</string>
    <string name="name">name</string>
    <string name="title">Title</string>
    <string name="user_image">User Image</string>
    <string name="url_image">UrL Image</string>
    <string name="address">Address:</string>
    <string name="actual_address">Actual Address</string>
    <string name="phonenum">PhoneNum</string>
    <string name="actual_email">Actual Email</string>
    <string name="phone">Phone:</string>
    <string name="actual_url">Actual URL</string>
    <string name="email">Email:</string>
    <string name="website">Website:</string>
    <string name="facebook_info">Facebook Info</string>
    <string name="twitter_info">Twitter Info</string>
    <string name="you_tube_info">You Tube Info</string>
    <string name="api">Google Civic Information API</string>
</resources>